fixed modal images too big in tablet

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -222,7 +222,12 @@ html.clicked {
     }
 
     .modal img {
-        width: 100%;
+        width: 85%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%)
     }
 
     .contact-button {
